// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown should render 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          class="sc-fzozJi hEMsew   "
          data-testid="select-list__toggle-button"
          id="downshift-0-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-0-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-0-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render disabled 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-2-label downshift-2-toggle-button"
          class="sc-fzozJi hEMsew   "
          data-testid="select-list__toggle-button"
          disabled=""
          id="downshift-2-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-2-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-2-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render invalid 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      aria-invalid="true"
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label downshift-1-toggle-button"
          class="sc-fzozJi hEMsew   is-invalid"
          data-testid="select-list__toggle-button"
          id="downshift-1-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-1-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-1-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-6-label downshift-6-toggle-button"
          class="sc-fzozJi hEMsew   "
          data-testid="select-list__toggle-button"
          id="downshift-6-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-6-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-6-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value="3"
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-3-label downshift-3-toggle-button"
          class="sc-fzozJi hEMsew  is-selected "
          data-testid="select-list__toggle-button"
          id="downshift-3-toggle-button"
          type="button"
        >
          Option 3
        </button>
        <ul
          aria-labelledby="downshift-3-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-3-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-7-label downshift-7-toggle-button"
          class="sc-fzozJi hEMsew   "
          data-testid="select-list__toggle-button"
          id="downshift-7-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-7-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-7-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown should render with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <input
      class="sc-AxirZ cNbglv overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
      data-testid="select-list__input"
      readonly=""
      type="text"
      value=""
    />
    <div
      class="relative w-full cursor-pointer"
    >
      <div>
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-5-label downshift-5-toggle-button"
          class="sc-fzozJi hEMsew   "
          data-testid="select-list__toggle-button"
          id="downshift-5-toggle-button"
          type="button"
        />
        <ul
          aria-labelledby="downshift-5-label"
          class="sc-fzoLsD XSmGT"
          id="downshift-5-menu"
          role="listbox"
          tabindex="-1"
        />
      </div>
      <div
        class="sc-AxiKw sc-AxhUy QmuzF w-10 pointer-events-none text-theme-neutral"
      >
        <div
          class="sc-AxjAm bccTmi"
          height="5"
          width="7"
        >
          <svg>
            caret-down.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
